# xrcon

./: .gitignore  README.rst  pyproject.toml  renovate.json
.github/workflows/: ci.yml
tests/: base.py  library_test.py
tests/commands/: xping_test.py  xrcon_test.py
xrcon/: client.py  utils.py
xrcon/commands/: base.py  xping.py  xrcon.py
